fixed layout issue in IE

--- a/src/sass/myservice-widgets.scss
+++ b/src/sass/myservice-widgets.scss
@@ -90,7 +90,7 @@
 
     &.card--claims-col-3 {
       @include uikit-media(sm) {
-        max-width: 332px;
+        max-width: 360px;
       }
       min-width: 300px;
     }
